<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zhawtof.represent.RepDetails">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/repPicture"
        android:src="@drawable/placeholder"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/photo_of_represenatative" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/w"
        android:id="@+id/partyAffiliation"
        android:background="#FFaFFF"
        android:layout_alignBottom="@+id/repPicture"
        android:layout_alignRight="@+id/repPicture"
        android:textSize="35sp"
        android:layout_gravity="top|center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/representative_name"
        android:id="@+id/repName"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/repPicture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/term_ends"
        android:id="@+id/endOfTerm"
        android:layout_below="@+id/position"
        android:layout_toEndOf="@+id/partyAffiliation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/position"
        android:id="@+id/position"
        android:layout_below="@+id/repName"
        android:layout_alignStart="@+id/repName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/committees"
        android:id="@+id/CommitteesWord"
        android:layout_below="@+id/repPicture"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/recent_bill"
        android:id="@+id/recentBillWord"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/committeesList" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bill_description"
        android:id="@+id/billDescription"
        android:layout_below="@+id/recentBillWord"
        android:layout_alignParentStart="true"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/committeesList"
        android:layout_below="@+id/CommitteesWord"
        android:layout_alignParentStart="true" />


</RelativeLayout>
